<!--
  ~ INFS3634 Group Assignment 2020 T1 - Team 31
  ~
  ~ This is an Android mobile application that showcases the use of functional Android building blocks
  ~ and the implementation of other features such as Google Firebase and API calls. Submitted as part of
  ~ a group assignment for the course, INFS3634.
  ~
  ~ Authors:
  ~ Shara Bakal, Khang Bui, Laurence Truong & Brian Vu
  ~
  -->

<resources>
    <string name="app_name">Codingo</string>
    <string name="nav_home">Home</string>
    <string name="nav_learn">Learn</string>
    <string name="nav_quiz">Quiz</string>
    <string name="nav_more">More</string>
    <string name="welcome">Welcome to Codingo!</string>
    <string name="welcome_content_1">We love to code.</string>
    <string name="welcome_content_2">Unlock your learning\ngoals now!</string>
    <string name="getstarted">GET STARTED</string>
    <string name="next">NEXT</string>
    <string name="YAY">Yay!</string>
    <string name="Congrats">Congratulations!</string>
    <string name="Ok">OK</string>
    <string name="quiz_topic_title">Pick a topic</string>
    <string name="video_prompt">HINT: Click on the box to watch the video!</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_learn">Learn</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
