<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ INFS3634 Group Assignment 2020 T1 - Team 31
  ~
  ~ This is an Android mobile application that showcases the use of functional Android building blocks
  ~ and the implementation of other features such as Google Firebase and API calls. Submitted as part of
  ~ a group assignment for the course, INFS3634.
  ~
  ~ Authors:
  ~ Shara Bakal, Khang Bui, Laurence Truong & Brian Vu
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@mipmap/check"
        android:title="@string/title_quiz" />

    <item
        android:id="@+id/navigation_learn"
        android:icon="@mipmap/learning"
        android:title="@string/title_learn" />

    <item
        android:id="@+id/navigation_profile_menu"
        android:icon="@mipmap/profile"
        android:title="@string/title_profile" />

</menu>
