<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.codingo.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.codingo.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.example.codingo.LearnFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_learn" />

    <fragment
        android:id="@+id/navigation_profile_menu"
        android:name="com.example.codingo.ProfileMenuFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_menu" />

    <fragment
        android:id="@+id/navigation_learn_topic"
        android:name="com.example.codingo.LearnTopicFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_learn_topic" />

    <fragment
        android:id="@+id/navigation_flashcard"
        android:name="com.example.codingo.FlashcardFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_flashcard" />

    <fragment
        android:id="@+id/navigation_video_learn"
        android:name="com.example.codingo.VideoLearnFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_video_learn" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.example.codingo.UserProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.example.codingo.LeaderboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.codingo.SettingsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_settings" />

</navigation>
